test/conformance/chainsaw/generating-policies/reports/audit-annotations/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpol-audit-ann-ns
  labels:
    env: staging
