test/conformance/chainsaw/generating-policies/reports/audit-annotations/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: ClusterPolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: Namespace
    name: gpol-audit-ann-ns
results:
- message: policy evaluated successfully
  policy: gpol-audit-annotations
  properties:
    namespace: gpol-audit-ann-ns
    env: staging
    generated-resources: /v1, Kind=ConfigMap Name=gpol-generated-cm Namespace=gpol-audit-ann-ns
    process: admission review
  result: pass
  rule: gpol-audit-annotations
  scored: true
  source: KyvernoGeneratingPolicy
scope:
  apiVersion: v1
  kind: Namespace
  name: gpol-audit-ann-ns
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
