test/conformance/chainsaw/generating-policies/reports/audit-annotations/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: audit-annotations
spec:
  concurrent: false
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: gpol-audit-annotations
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: create namespace with env label
    try:
    - apply:
        file: namespace.yaml
  - name: sleep
    try:
    - sleep:
        duration: 10s
  - name: check generated configmap
    try:
    - assert:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: gpol-generated-cm
            namespace: gpol-audit-ann-ns
          data:
            created-for: gpol-audit-ann-ns
  - name: check report contains audit annotation properties
    try:
    - assert:
        file: report-assert.yaml
